--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    min-width: 540px;
     max-width: 2000px;
     margin: 50px auto;
     gap: 20px;
@@ -34,8 +33,6 @@ body {
     background-position: top left, -25rem -15rem, top left;
     background-repeat:no-repeat;
     box-shadow: 0 0 10px rgba(0, 0, 0, 1);
-    min-width: 540px;
-
 }
 
 .box {
@@ -306,7 +303,7 @@ body {
 
 .headerTitle {
     margin-top: 0; 
-    font-size: xxx-large; 
+    font-size: 32.5pt; 
     text-align: right; 
     padding-right: 40px; 
     padding-top: 25px; 
